--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -3,17 +3,25 @@
 
     <item
         android:id="@+id/navigation_home"
-        android:icon="@drawable/ic_home_black_24dp"
+        android:icon="@drawable/home"
         android:title="@string/title_home" />
 
     <item
-        android:id="@+id/navigation_dashboard"
-        android:icon="@drawable/ic_dashboard_black_24dp"
-        android:title="@string/title_dashboard" />
+        android:id="@+id/navigation_goals"
+        android:icon="@drawable/clipboard"
+        android:title="@string/title_goals" />
 
     <item
-        android:id="@+id/navigation_notifications"
-        android:icon="@drawable/ic_notifications_black_24dp"
-        android:title="@string/title_notifications" />
+        android:id="@+id/navigation_transactions"
+        android:icon="@android:drawable/ic_menu_add"
+        android:title="@string/title_transactions" />
+    <item
+        android:id="@+id/navigation_reports"
+        android:icon="@drawable/bar_chart_2"
+        android:title="@string/title_reports" />
+    <item
+        android:id="@+id/navigation_categories"
+        android:icon="@drawable/tag"
+        android:title="@string/title_categories" />
 
 </menu>
