--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -12,14 +12,24 @@
         tools:layout="@layout/fragment_home" />
 
     <fragment
-        android:id="@+id/navigation_dashboard"
-        android:name="com.example.prog7313_poe.ui.dashboard.DashboardFragment"
-        android:label="@string/title_dashboard"
+        android:id="@+id/navigation_goals"
+        android:name="com.example.prog7313_poe.ui.goals.GoalsFragment"
+        android:label="@string/title_goals"
         tools:layout="@layout/fragment_dashboard" />
 
     <fragment
-        android:id="@+id/navigation_notifications"
-        android:name="com.example.prog7313_poe.ui.notifications.NotificationsFragment"
-        android:label="@string/title_notifications"
+        android:id="@+id/navigation_transactions"
+        android:name="com.example.prog7313_poe.ui.transactions.TransactionsFragment"
+        android:label="@string/title_transactions"
         tools:layout="@layout/fragment_notifications" />
+    <fragment
+        android:id="@+id/navigation_categories"
+        android:name="com.example.prog7313_poe.ui.categories.CategoriesFragment"
+        android:label="@string/title_categories"
+        tools:layout="@layout/fragment_categories" />
+    <fragment
+        android:id="@+id/navigation_reports"
+        android:name="com.example.prog7313_poe.ui.reports.ReportsFragment"
+        android:label="@string/title_reports"
+        tools:layout="@layout/fragment_reports" />
 </navigation>
