--- a/app/src/main/res/layout/register_activity.xml
+++ b/app/src/main/res/layout/register_activity.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:padding="16dp"
     android:background="@drawable/background"
-    tools:context=".LoginActivity">
+    tools:context=".RegisterActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -67,10 +67,31 @@
                     android:textColor="@color/white" />
 
                 <EditText
+                    android:id="@+id/edit_name"
+                    android:layout_width="302dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="20dp"
+                    android:background="@drawable/roundstyle_grey"
+                    android:drawablePadding="10dp"
+                    android:hint="Name"
+                    android:inputType="textEmailAddress"
+                    android:padding="15dp" />
+                <EditText
+                    android:id="@+id/edit_surname"
+                    android:layout_width="302dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="20dp"
+                    android:background="@drawable/roundstyle_grey"
+                    android:drawablePadding="10dp"
+                    android:hint="Name"
+                    android:inputType="textEmailAddress"
+                    android:padding="15dp" />
+
+                <EditText
                     android:id="@+id/edit_email"
                     android:layout_width="302dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="30dp"
+                    android:layout_marginTop="20dp"
                     android:background="@drawable/roundstyle_grey"
                     android:drawablePadding="10dp"
                     android:hint="Email"
@@ -88,16 +109,7 @@
                     android:inputType="textPassword"
                     android:padding="15dp" />
 
-                <Button
-                    android:id="@+id/btn_login"
-                    android:layout_width="192dp"
-                    android:layout_height="60dp"
-                    android:layout_marginTop="30dp"
-                    android:background="@drawable/roundstyle_gradient"
-                    android:padding="15dp"
-                    android:text="Login"
-                    android:textColor="@color/ez_black"
-                    android:textSize="16sp" />
+
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -106,21 +118,6 @@
                     android:gravity="center"
                     android:orientation="vertical">
 
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="No account?"
-                        android:textColor="@color/white"
-                        android:textSize="14sp" />
-
-                    <TextView
-                        android:id="@+id/text_register"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginBottom="20dp"
-                        android:text="Register Here"
-                        android:textColor="@color/white"
-                        android:textSize="14sp" />
 
                     <Button
                         android:id="@+id/btn_register"
