--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="white">#FFFFFFFF</color>
     <color name="ez_black">#2C2C2C</color>
     <color name="ez_grey">#757575</color>
+    <color name="ez_yellow">#FACC55</color>
 </resources>
