New Categories layout implemented

--- a/app/src/main/res/layout/fragment_new_categories.xml
+++ b/app/src/main/res/layout/fragment_new_categories.xml
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.goals.GoalsFragment"
-    android:background="@drawable/roundstyle_black">
+    tools:context=".ui.categories.NewCategoriesFragment">
 
     <FrameLayout
         android:layout_width="match_parent"
@@ -14,8 +12,8 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical"
-            android:background="@drawable/roundstyle_black">
+            android:background="@drawable/roundstyle_black"
+            android:orientation="vertical">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -39,7 +37,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
-                    android:text="Goals"
+                    android:text="Categories"
                     android:textAlignment="center"
                     android:textColor="@color/ez_yellow"
                     android:textSize="24sp" />
@@ -54,15 +52,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
                 android:layout_marginTop="25dp"
-                android:layout_marginRight="10dp">
-
-                <Button
-                    android:id="@+id/button"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:background="@drawable/roundstyle_gradient"
-                    android:text="@string/addnewgoal" />
-            </FrameLayout>
+                android:layout_marginRight="10dp"/>
 
             <FrameLayout
                 android:layout_width="match_parent"
@@ -78,6 +68,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="10dp"
+                        android:layout_marginTop="10dp"
                         android:layout_marginRight="10dp"
                         android:background="@drawable/border">
 
@@ -101,52 +92,96 @@
                                     android:orientation="vertical">
 
                                     <TextView
-                                        android:id="@+id/textView3"
+                                        android:id="@+id/categoriesNameView"
                                         android:layout_width="match_parent"
                                         android:layout_height="wrap_content"
-                                        android:layout_marginBottom="10dp"
-                                        android:layout_weight="1"
-                                        android:text="TextView"
-                                        android:textColor="@color/white" />
-
-                                    <TextView
-                                        android:id="@+id/dateView"
-                                        android:layout_width="match_parent"
-                                        android:layout_height="wrap_content"
-                                        android:text="TextView"
+                                        android:text="Category"
                                         android:textColor="@color/ez_grey" />
 
-                                    <TextView
-                                        android:id="@+id/textView5"
+                                    <EditText
+                                        android:id="@+id/categoriesNameInput"
                                         android:layout_width="match_parent"
                                         android:layout_height="wrap_content"
-                                        android:layout_weight="1"
-                                        android:text="TextView"
+                                        android:ems="10"
+                                        android:inputType="text"
+                                        android:text="New Category"
                                         android:textColor="@color/white" />
                                 </LinearLayout>
                             </FrameLayout>
 
+                        </LinearLayout>
+                    </FrameLayout>
+
+                    <FrameLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="10dp"
+                        android:layout_marginTop="10dp"
+                        android:layout_marginRight="10dp"
+                        android:background="@drawable/border">
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:orientation="horizontal">
+
                             <FrameLayout
                                 android:layout_width="wrap_content"
-                                android:layout_height="match_parent">
+                                android:layout_height="match_parent"
+                                android:layout_marginLeft="15dp"
+                                android:layout_marginTop="10dp"
+                                android:layout_marginRight="15dp"
+                                android:layout_marginBottom="10dp"
+                                android:layout_weight="15">
 
-                                <ImageButton
-                                    android:id="@+id/imageButton7"
-                                    android:layout_width="wrap_content"
+                                <LinearLayout
+                                    android:layout_width="match_parent"
                                     android:layout_height="match_parent"
-                                    android:layout_marginTop="10dp"
-                                    android:layout_marginRight="15dp"
-                                    android:layout_marginBottom="10dp"
-                                    android:background="@color/ez_black"
-                                    android:src="@drawable/more_vertical" />
+                                    android:orientation="vertical">
+
+                                    <TextView
+                                        android:id="@+id/categoriesBudgetView"
+                                        android:layout_width="match_parent"
+                                        android:layout_height="wrap_content"
+                                        android:text="Budget"
+                                        android:textColor="@color/ez_grey" />
+
+                                    <EditText
+                                        android:id="@+id/categoriesBudgetInput"
+                                        android:layout_width="match_parent"
+                                        android:layout_height="wrap_content"
+                                        android:ems="10"
+                                        android:inputType="numberDecimal"
+                                        android:text="R 0.00"
+                                        android:textColor="@color/white" />
+                                </LinearLayout>
                             </FrameLayout>
 
                         </LinearLayout>
                     </FrameLayout>
+
+                    <FrameLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="10dp"
+                        android:layout_marginTop="25dp"
+                        android:layout_marginRight="10dp">
+
+                        <Button
+                            android:id="@+id/transactionSaveButton"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:background="@drawable/roundstyle_gradient"
+                            android:text="@string/saveTransaction"
+                            android:textAllCaps="false"
+                            android:textSize="20sp" />
+                    </FrameLayout>
+
                 </LinearLayout>
             </FrameLayout>
 
         </LinearLayout>
 
     </FrameLayout>
-</androidx.constraintlayout.widget.ConstraintLayout>
+
+</FrameLayout>
