--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -269,7 +269,7 @@
                                 android:layout_weight="1" />
 
                             <ImageButton
-                                android:id="@+id/imageButton3"
+                                android:id="@+id/reportsPreviousCategoryMonth"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_weight="1"
