--- a/app/src/main/res/layout/fragment_categories_reports.xml
+++ b/app/src/main/res/layout/fragment_categories_reports.xml
@@ -58,35 +58,6 @@
                     android:orientation="vertical">
 
                     <FrameLayout
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center|top">
-
-                        <RadioGroup
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:checkedButton="@id/transactionExpenseButton"
-                            android:orientation="horizontal">
-
-                            <RadioButton
-                                android:id="@+id/transactionExpenseButton"
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:buttonTint="@color/ez_yellow"
-                                android:text="Expense"
-                                android:textColor="@color/ez_yellow" />
-
-                            <RadioButton
-                                android:id="@+id/transactionIncomeButton"
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:buttonTint="@color/ez_yellow"
-                                android:text="Income"
-                                android:textColor="@color/ez_yellow" />
-                        </RadioGroup>
-                    </FrameLayout>
-
-                    <FrameLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="10dp"
@@ -124,14 +95,14 @@
                                             android:orientation="vertical">
 
                                             <TextView
-                                                android:id="@+id/dateView"
+                                                android:id="@+id/dateStartView"
                                                 android:layout_width="match_parent"
                                                 android:layout_height="wrap_content"
                                                 android:text="Start Date"
                                                 android:textColor="@color/ez_grey" />
 
                                             <EditText
-                                                android:id="@+id/dateInput"
+                                                android:id="@+id/dateStartInput"
                                                 android:layout_width="match_parent"
                                                 android:layout_height="wrap_content"
                                                 android:ems="10"
@@ -175,14 +146,14 @@
                                             android:orientation="vertical">
 
                                             <TextView
-                                                android:id="@+id/timeView"
+                                                android:id="@+id/dateEndView"
                                                 android:layout_width="match_parent"
                                                 android:layout_height="wrap_content"
                                                 android:text="End Date"
                                                 android:textColor="@color/ez_grey" />
 
                                             <EditText
-                                                android:id="@+id/editTextDate"
+                                                android:id="@+id/dateEndInput"
                                                 android:layout_width="match_parent"
                                                 android:layout_height="wrap_content"
                                                 android:ems="10"
@@ -199,7 +170,8 @@
 
                     <FrameLayout
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent">
+                        android:layout_height="match_parent"
+                        android:layout_marginTop="10dp">
 
                         <ScrollView
                             android:layout_width="match_parent"
@@ -228,23 +200,6 @@
                                             android:layout_height="match_parent"
                                             android:layout_marginLeft="15dp"
                                             android:layout_marginTop="10dp"
-                                            android:layout_marginBottom="10dp"
-                                            android:layout_weight="1">
-
-                                            <ImageView
-                                                android:id="@+id/imageView3"
-                                                android:layout_width="wrap_content"
-                                                android:layout_height="wrap_content"
-                                                android:layout_gravity="center"
-                                                tools:src="@tools:sample/avatars" />
-
-                                        </FrameLayout>
-
-                                        <FrameLayout
-                                            android:layout_width="wrap_content"
-                                            android:layout_height="match_parent"
-                                            android:layout_marginLeft="15dp"
-                                            android:layout_marginTop="10dp"
                                             android:layout_marginRight="15dp"
                                             android:layout_marginBottom="10dp"
                                             android:layout_weight="15">
@@ -255,62 +210,25 @@
                                                 android:orientation="vertical">
 
                                                 <TextView
-                                                    android:id="@+id/textView12"
+                                                    android:id="@+id/transactionReportsCategoryView"
                                                     android:layout_width="match_parent"
                                                     android:layout_height="wrap_content"
-                                                    android:text="Description"
-                                                    android:textColor="@color/ez_grey" />
+                                                    android:text="textView"
+                                                    android:textColor="@color/white" />
 
                                                 <TextView
                                                     android:id="@+id/textView3"
                                                     android:layout_width="match_parent"
                                                     android:layout_height="wrap_content"
-                                                    android:text="TextView"
-                                                    android:textColor="@color/white" />
-
-                                                <TextView
-                                                    android:id="@+id/dateView"
-                                                    android:layout_width="match_parent"
-                                                    android:layout_height="wrap_content"
                                                     android:layout_marginTop="10dp"
-                                                    android:text="Category"
+                                                    android:text="Total Expenses"
                                                     android:textColor="@color/ez_grey" />
 
                                                 <TextView
-                                                    android:id="@+id/textView5"
+                                                    android:id="@+id/transactionReportsTotalView"
                                                     android:layout_width="match_parent"
                                                     android:layout_height="wrap_content"
-                                                    android:text="TextView"
-                                                    android:textColor="@color/white" />
-
-                                                <TextView
-                                                    android:id="@+id/textView4"
-                                                    android:layout_width="match_parent"
-                                                    android:layout_height="wrap_content"
-                                                    android:layout_marginTop="10dp"
-                                                    android:text="Date"
-                                                    android:textColor="@color/ez_grey" />
-
-                                                <TextView
-                                                    android:id="@+id/textView6"
-                                                    android:layout_width="match_parent"
-                                                    android:layout_height="wrap_content"
-                                                    android:text="TextView"
-                                                    android:textColor="@color/white" />
-
-                                                <TextView
-                                                    android:id="@+id/textView7"
-                                                    android:layout_width="match_parent"
-                                                    android:layout_height="wrap_content"
-                                                    android:layout_marginTop="10dp"
-                                                    android:text="Amount"
-                                                    android:textColor="@color/ez_grey" />
-
-                                                <TextView
-                                                    android:id="@+id/textView8"
-                                                    android:layout_width="match_parent"
-                                                    android:layout_height="wrap_content"
-                                                    android:text="TextView"
+                                                    android:text="textView"
                                                     android:textColor="@color/white" />
 
                                             </LinearLayout>
@@ -339,7 +257,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:background="@drawable/roundstyle_gradient"
-                        android:text="Update"
+                        android:text="Search"
                         android:textAllCaps="false"
                         android:textSize="20sp" />
                 </FrameLayout>
