--- a/app/src/main/res/layout/fragment_transactions_reports.xml
+++ b/app/src/main/res/layout/fragment_transactions_reports.xml
@@ -125,7 +125,7 @@
                                             android:orientation="vertical">
 
                                             <TextView
-                                                android:id="@+id/dateView"
+                                                android:id="@+id/dateStartView"
                                                 android:layout_width="match_parent"
                                                 android:layout_height="wrap_content"
                                                 android:text="Start Date"
@@ -340,7 +340,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:background="@drawable/roundstyle_gradient"
-                        android:text="Update"
+                        android:text="Search"
                         android:textAllCaps="false"
                         android:textSize="20sp" />
                 </FrameLayout>
